terminada vista de opcion de perfil, implementaremos sqlite

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,7 +11,7 @@
       <ion-input placeholder="Password" clearInput type="password" [(ngModel)]="password"></ion-input>
     </ion-item>
 
-    <button ion-button icon-left>
+<button ion-button icon-left class="btnfacebook">
   <ion-icon name="logo-facebook"></ion-icon>
   Conectar con facebook
 </button>
