--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -1,18 +1,45 @@
-<!--
-  Generated template for the Perfil page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>perfil</ion-title>
+  <ion-navbar color="negro">
+    <ion-title>Perfil</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="contenido">
+
+
+  <img src="build/images/logo.png" alt="">
+
+
+
+  <ion-list radio-group>
+    <p>
+      Ya casi hemos terminado ...
+    </p>
+
+    <ion-list-header>
+      Tipo de usuario
+    </ion-list-header>
+
+    <ion-item>
+      <ion-label>Consumidor</ion-label>
+      <ion-radio checked="true" value="1"></ion-radio>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Proveedor</ion-label>
+      <ion-radio value="2"></ion-radio>
+    </ion-item>
+
+
+<button ion-button class="enlace ingresar" (click)="enviar()">
+  Enviar
+</button>
+
+
+  </ion-list>
+
 
 </ion-content>
