--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -14,7 +14,7 @@
 
 
 
-  <ion-list radio-group>
+  <ion-list radio-group [(ngModel)]="user.tipo">
     <p>
       Ya casi hemos terminado ...
     </p>
