actualizado con gustos

--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -16,7 +16,7 @@
 
   <ion-list radio-group [(ngModel)]="user.tipo">
     <p>
-      Ya casi hemos terminado ...
+      Nos gustaria saber que experiencia deseas tener.
     </p>
 
     <ion-list-header>
