ip estatico, antes de instalar google maps

--- a/src/pages/gustos/gustos.html
+++ b/src/pages/gustos/gustos.html
@@ -15,7 +15,7 @@
 
     <ion-item ion-item *ngFor="let gusto of gustos" (click)="itemSelected(gusto)">
       <ion-label>{{ gusto.nombre }}</ion-label>
-      <ion-checkbox color="dark" checked="false"></ion-checkbox>
+      <ion-checkbox [(ngModel)]="gusto.ok" color="dark" checked="false"></ion-checkbox>
     </ion-item>
 
   </ion-list>
