--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-content padding class="contenido">
 
-  <img src="build/images/logo.png" alt="">
+  <img src="http://192.168.0.11:8000/imagen" alt="">
 
 
   <ion-list>
