--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -10,7 +10,7 @@
 <ion-content padding class="contenido">
 
 
-  <img src="build/images/logo.png" alt="">
+  <img src="http://192.168.0.11:8000/imagen" alt="">
 
 
 
