tenemos mapa y marcadores pero hay problemas con estilos y se ralla el mapa

--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -10,7 +10,7 @@
 <ion-content padding class="contenido">
 
 
-  <img src="http://192.168.0.11:8000/imagen" alt="">
+  <img src="https://movilapp-xxangusxx.c9users.io/imagen" alt="">
 
 
 
