--- a/src/pages/mapa/mapa.html
+++ b/src/pages/mapa/mapa.html
@@ -1,18 +1,12 @@
-<!--
-  Generated template for the Mapa page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>mapa</ion-title>
+  <ion-navbar color="verde">
+    <ion-title>buscar</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content padding class="contenido">
+  <div #map id="map"></div>
 </ion-content>
